--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -102,10 +102,23 @@ nav a {
 
 /* main section styles */
 
+main{
+    max-width: 1140px;
+    margin:0 auto; /*we can use justyfy content. margin: auto means divided by same px from both side.
+    /* justify-content: center; */
+}
+
 /* about section styles */
 .about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
     margin: 130px 0;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-between;
+}
+.about-info{
+    text-align: center;
 }
