--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -154,39 +154,68 @@ main section {
 /* resume */
 .resume-container {
     display: flex;
-    gap:50px;
+    gap: 50px;
 }
+
 .resume-column-title {
-    color:#474747;
+    color: #474747;
     font-size: 30px;
     font-weight: 700;
     margin-bottom: 10px;
 }
-.resume-item-institute, .resume-item-description{
-color:#757575;
+
+.resume-item-institute,
+.resume-item-description {
+    color: #757575;
 
 }
-.resume-item-title{
-color: #474747;
-font-size: 25px;
-font-weight: 700;
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
 }
-.resume-container hr{
+
+.resume-container hr {
     margin: 30px 0;
 }
-.resume-item-institute{
+
+.resume-item-institute {
     margin-bottom: 20px;
     margin-top: 0px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
 
 /* footer styles */
-footer{
+footer {
     display: flex;
+    gap: 100px;
     background: #FFF8F3;
     padding: 130px 200px;
     margin-top: 100px;
+}
+
+.footer-column {
+    width: 50%;
+}
+.social-links a{
+    margin-right: 25px;
+}
+
+.contact input[type="name"], .contact input[type="email"],
+textarea {
+    display: block;
+    /*we can use "display:flex " also*/
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color:#757575;
+    font-size: 16px;
+    border-radius: 5px;
+    background: #FFF;
+    border:0;
+    width: 100%;
 }
